# solana_data_aggregator

./: Cargo.toml  config.toml  readme.md  rustfmt.toml
src/: main.rs
src/api/: error.rs  handlers.rs  mod.rs  routes.rs
src/config/: config.rs
src/data_processing/: mod.rs  processor.rs
src/data_retrieval/: mod.rs  pub_sub_solana_client.rs  rpc_solana_client.rs
